New website updates

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2418,6 +2418,18 @@ input, select, textarea {
 				width: 100%;
 			}
 
+
+/* Videos */
+
+video {
+	max-height: 25rem;
+	max-width: 25rem;
+}
+
+
+
+
+
 /* List */
 
 	ol {
